@@ -1,0 +1,5 @@
+package org.instedd.act.events
+
+class CasesFileUpdatedEvent {
+	String guid
+}
