@@ -1,0 +1,1 @@
+CREATE TABLE cases_files_cases (file_guid VARCHAR(50), case_guid VARCHAR(50));
